--- a/docker_deployment/docker-compose.yaml
+++ b/docker_deployment/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       #POSTGRES_DB: TEST_SM
       #PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - /docker_deployment/db:/var/lib/postgresql/data
+      - ./db:/var/lib/postgresql/data
     ports:
       - "5002:5432"
     container_name: postgres
